<b>Version 2.4.6:</b><br/><br/>
    &#8226; Changes to refresh on startup<br/>
    &#8226; Better translations<br/>
    &#8226; Fix duplicate users while searching<br/>
    &#8226; Some changes for attaching pictures on KitKat<br/>
<br/><br/>

<b>Version 2.4.5:</b><br/><br/>
    &#8226; A few crash fixes<br/>
<br/><br/>

<b>Version 2.4.4:</b><br/><br/>
    &#8226; Use the correct theme on scheduled tweets<br/>
    &#8226; Background cleanup and fixes<br/>
<br/><br/>

<b>Version 2.4.3:</b><br/><br/>
    &#8226; Force external browser for translations<br/>
    &#8226; Fix top tweets on trends<br/>
<br/><br/>

<b>Version 2.4.2:</b><br/><br/>
    &#8226; Android Wear support<br/>
    &#8226; Improved list member viewing<br/>
    &#8226; Insert composed text into a scheduled tweet<br/>
    &#8226; Few changes for loading circle images<br/>
<br/><br/>

<b>Version 2.4.1:</b><br/><br/>
    &#8226; More on viewing multiple images. Twitter releases this feature tomorrow.<br/>
<br/><br/>

<b>Version 2.4.0:</b><br/><br/>
    &#8226; Translate tweets (redirects to website)<br/>
    &#8226; View multiple images in a tweet<br/>
    &#8226; Schedule tweets from the compose window<br/>
    &#8226; Automatically queue tweets to send from the compose window when data connection is established<br/>
    &#8226; Filter in "top tweets" when searching<br/>
    &#8226; Attach pictures from the Talon Pull compose button<br/>
    &#8226; A little better handling of drafts<br/>
    &#8226; Better handling of clicks on the interaction drawer<br/>
    &#8226; Improvements for RTL<br/>
    &#8226; Changed the way that picture links are displayed<br/>
    &#8226; In-line twipple image support<br/>
    &#8226; Small changes to trend searching<br/>
<br/><br/>

<b>Version 2.3.7:</b><br/><br/>
    &#8226; Disable the send button on tweet viewer until you have typed something<br/>
    &#8226; Move the logout button to the bottom of the drawer<br/>