@@ -25,7 +25,6 @@
     - delete all drafts feature
     - bugs
         - spinner behind small images
-        - not going to the correct page when coming from another drawer activity
         - can't attach images if you open a tweet from the widget
         - can't tweet images from the widget
 
